# drapery

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.rst  appveyor.yml  pixi.toml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.ci/appveyor/: deploy_to_anaconda.ps1
.github/workflows/: condapackage.yml  pythonpackage.yml
ci/: cli-help.ps1
ci/appveyor/: deploy_to_anaconda.ps1  move-conda-artifacts.py
conda-build/: meta.yaml
conda-recipe/: meta.yaml
docs/source/: cli.rst  conf.py  index.rst  manual.rst
docs/source/api/: drapery.ops.rst  drapery.rst  modules.rst
docs/source/cli/: cli.drape.txt
drapery/: __init__.py  _version.py
drapery/cli/: drape.py
drapery/core/: api.py
drapery/ops/: sample.py
tests/: test_cli.py
